--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,1 @@
-<main class="container">
-  <input 
-    type="file" 
-    accept=".json" 
-    (change)="onFileSelected($event)" 
-    class="file-input" />
-
-  <div *ngIf="elements.length > 0" class="result-card">
-    <div class="scrollable-list">
-      <ul class="main-list">
-        <li *ngFor="let element of elements" class="main-item">
-          <div class="main-header" (click)="toggleCollapse(element)" style="cursor: pointer;">
-            <!-- Titre de l'élément -->
-            <h2 >{{ element.name }}</h2>
-          </div>
-
-          <!-- Liste imbriquée conditionnelle -->
-          <ul 
-            *ngIf="!element.collapsed" 
-            class="nested-list">
-            <li *ngFor="let step of element.elements" class="nested-item">
-              <div class="step-details">
-                <span class="step-name">{{ step.name }}</span>
-              </div>
-              <div class="button-groups">
-                <button 
-                  class="generate-issue-button" 
-                  (click)="onGenerateGitLabIssue(step)">
-                  Flaky!
-                </button>
-                <button 
-                  class="generate-issue-button" 
-                  (click)="onGenerateGitLabIssue(step)">
-                  Générer issue GitLab
-                </button>
-              </div>
-
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</main>
+<router-outlet></router-outlet>
