add ui + songs + page

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<div>
-    {{result | json}}
-</div>
+<ng-container *ngIf="results">
+    <ui-list [results]="results">
+
+    </ui-list>
+</ng-container>
