--- a/src/app/utils/ui-button/ui-button.component.html
+++ b/src/app/utils/ui-button/ui-button.component.html
@@ -1,6 +1,6 @@
 <button class="pushable" (click)="click()">
     <span class="shadow"></span>
     <span class="edge"></span>
-    <span class="front"><div class="elements"> <div class="{{type}}"></div> <span>{{type}}</span></div> </span>
+    <span class="front"><div class="elements"> <div class="{{type}}"></div> <span>{{label}}</span></div> </span>
 </button>
   
