--- a/src/app/utils/ui-title-collapse/ui-title-collapse.component.css
+++ b/src/app/utils/ui-title-collapse/ui-title-collapse.component.css
@@ -22,7 +22,11 @@
     display: flex;
     align-items: center;
     height: 60px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
     justify-content: space-between;
+    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 .btn-grp{
