--- a/src/app/utils/ui-list/ui-list.component.html
+++ b/src/app/utils/ui-list/ui-list.component.html
@@ -2,7 +2,7 @@
 <div   [@staggerAnimation]>
     <div *ngFor="let result of results">
         <div class="item">
-            <ui-title-collapse [result]="result"></ui-title-collapse>
-            </div>
+            <ng-container *ngTemplateOutlet="template; context: {$implicit: result}"></ng-container>
+        </div>
     </div>
 </div>
