--- a/src/app/utils/ui-title-collapse/ui-title-collapse.component.html
+++ b/src/app/utils/ui-title-collapse/ui-title-collapse.component.html
@@ -1,7 +1,8 @@
 <div class="element" *ngIf="result">
     <ui-checkbox [(ngModel)]="checked" [label]="result.scenarioName"></ui-checkbox>
     <span *ngIf="checked === true"> 
-        <ui-link label="12"></ui-link> 
+        {{result.gitlabIssueId | json}}
+        <ui-link [label]="''+result.gitlabIssueId"></ui-link> 
     </span>
     <div class="btn-grp" *ngIf="checked === false">
         <ui-button label="Flaky" type="flaky" (click)="flaky()"></ui-button>
