--- a/src/app/import/import.component.css
+++ b/src/app/import/import.component.css
@@ -1,6 +1,9 @@
 .container {
     padding: 20px;
   }
+  :host {
+    height: 100%
+  }
   .center{
     display: flex;
     justify-content: space-between;
