--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; 
+}
 .example-container {
     display: flex;
     flex-direction: column;
@@ -32,4 +41,10 @@
   
   table {
     width: 100%;
+  }
+
+  .center{
+    display: flex;
+    gap: 5px;
+    align-items: center;
   }
