--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,16 @@
     left: 0;
     right: 0;
   }
-  
+  mat-sidenav{
+    background-color: transparent;
+  }
+  button{
+    background-color: #3f51b5;
+    box-shadow: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
   .example-is-mobile .example-toolbar {
     position: fixed;
     /* Make sure the toolbar will stay on top of the content as it scrolls past. */
